--- a/index.html
+++ b/index.html
@@ -445,13 +445,36 @@
         </div>
       </div>
     </div>
-    <p style="height: 30px;"></p>
+    <p style="height: 1px; margin-bottom: 0;"></p>
   </section>
 
   <!--------------------Contact Section-------------------->
 
-  <section id="contact">
-  </section>
+  <footer id="contact">
+    <div class="container">
+      <div class="row justify-content-center">
+        <p style="margin: 10px;"></p>
+        <div class="col-md-3 footer-box align-self-center">
+          <a href="#"><img src="images/blackpinkLogo.png" alt="" class="logo"></a>
+        </div>
+        <div class="col-md-3 footer-box align-self-center">
+          <p><b>Contact</b></p>
+          <p><i class="bi bi-house-add-fill"></i>  Davao City, Philippines</p>
+          <p><i class="bi bi-envelope-at-fill"></i>  raphaelungab14@gmail.com</p>
+          <p><i class="bi bi-phone-fill"></i>  +63 999 861 0340</p>
+        </div>
+        <div class="col-md-3 footer-box">
+          <p><b>Socials</b></p>
+          <p><a href="https://www.facebook.com/DaedraEX/" target="_blank"><i class="bi bi-facebook"></i></a>
+          <a href="https://twitter.com/rapaelyuu" target="_blank"><i class="bi bi-twitter"></i></a>
+          <a href="https://www.linkedin.com/" target="_blank"><i class="bi bi-linkedin"></i></a></p>
+        </div>
+      </div>
+    </div>
+    <div class="text-center p-4">
+      © 2021 Copyright: Raphael Ungab
+    </div>
+  </footer>
 
 
 
